# django-mongodb-extensions

./: .readthedocs.yaml  README.md  justfile  pyproject.toml
.github/workflows/: release-python.yml  test-python.yml
django_mongodb_extensions/mql_panel/: __init__.py  forms.py  panel.py
django_mongodb_extensions/rest_framework/: __init__.py  fields.py  serializers.py
docs/: Makefile  conf.py  index.rst  make.bat  mql-panel.rst  rest-framework.rst
docs/_ext/: djangodocs.py
docs/ref/: mql-panel.rst  rest-framework.rst
tests/: settings.py
tests/rest_framework_tests/: models.py  serializers.py  test_embedded_model_serializer.py  test_mongo_model_serializer.py  test_object_id_field.py  test_polymorphic_embedded_model_serializer.py
