[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-mongodb-extensions"
version = "0.3.0.dev0"
description = "Extensions for Django MongoDB Backend"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"

[project.optional-dependencies]
docs = [
    "furo",
    "sphinx>=7",
    "sphinx-copybutton",
]
test = [
    "coverage",
    "django-debug-toolbar",
]

[project.urls]
Documentation = "https://django-mongodb-extensions.readthedocs.io"
Source = "https://github.com/mongodb-labs/django-mongodb-extensions"
Tracker = "https://github.com/mongodb-labs/django-mongodb-extensions/issues"

[tool.ruff.lint]
select = ["I", "F"]
