[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-mongodb-extensions"
version = "0.3.0"
description = "Extensions for Django MongoDB Backend"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]

[project.optional-dependencies]
mql_panel = [
    "django-debug-toolbar>=5.1",
]
rest_framework = [
    "djangorestframework>=3.16",
]

[project.urls]
Documentation = "https://django-mongodb-extensions.readthedocs.io"
Source = "https://github.com/mongodb-labs/django-mongodb-extensions"
Tracker = "https://github.com/mongodb-labs/django-mongodb-extensions/issues"

[dependency-groups]
docs = [
    "django>=5.2",
    "furo",
    "sphinx>=7",
    "sphinx-copybutton",
]
test = [
    "coverage",
    "django-mongodb-backend>=5.2",
    "django-mongodb-extensions[mql_panel,rest_framework]",
]
typing = [
    "django-stubs>=5.2",
    "djangorestframework-stubs>=3.16",
    "pyright",
    {include-group = "test"},
]

[tool.pyright]
include = ["django_mongodb_extensions"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["I", "F"]
